# AmplinkFlashProgrammer

./: .gitignore  CMakeLists.txt  README.md  config_8h_source.html  device_info.txt  doc_8h_source.html  globals.html  globals_enum.html  i2c__driver_8h.html  i2c__driver_8h.js  i2c__driver_8h_source.html  programmer_8h.html  spi__driver_8h.html  spi__flash_8h.html  struct_args.js  struct_programmer_context.html
arduino_analyzer/: arduino_analyzer.ino
docs/: Doxyfile  open-docs.bat
docs/html/: annotated.html  cli_8h.js  cli_8h_source.html  config_8h.html  config_8h.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  fileparser_8h.html  fileparser_8h_source.html  files.html  functions_vars.html  globals_eval.html  globals_func.html  gpio__driver_8h.html  gpio__driver_8h.js  i2c__driver_8h.html  i2c__driver_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  programmer_8h.js  programmer_8h_source.html  spi__driver_8h.js  spi__driver_8h_source.html  spi__flash_8h.js  struct_args.html
doxygen/html/: annotated_dup.js  classes.html  cli_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  fileparser_8h.js  functions.html  (+8 more)
include/: config.h  utils.h
search/: all_2.js  all_8.js  all_9.js  all_a.js  enumvalues_2.js  enumvalues_3.js  files_4.js  functions_2.js  pages_2.js  pages_7.js  pages_8.js
src/: cli.c  cli.h  config.h  doc.h  fileparser.c  fileparser.h  gpio_driver.c  gpio_driver.h  i2c_driver.c  i2c_driver.h  main.c  programmer.c  programmer.h  spi_driver.c  spi_driver.h  spi_flash.c  spi_flash.h
(+39 files in other folders)
